- Checkbox and Radio Button doesn't work. Oops! I won't fix it (I can't!).

Internet Explorer 6 or under are NOT supported!
FireFox/Safari/Chrome/Opera will work fine as for HTML5 supported version.
It's hard to check all versions above browsers as you know. I hope you understand.

=================================
Change Log
=================================

Ver.2.1 (Will be release soon.)

Ver.2 ====================================================================
- The version numbering policy is changed.
- The default-values key in a context is used automatically.
- Chat page is added as a sample. It is used to debug the authorization.

[Major differences from Ver.1]
- The authentication/authorization is implemented.
- The sort condition can be specified in JavaScript program.
- The online course "INTER-Mediator Basic" is released (http://msyk-edu.net/) by Japanese.
- "transaction" key in the option settings is supported, but it's partially.
- The repeater node having the "_im_for_noresult_" class is shown for no records was returned.
- Ignoring enclosure/repeater for table or list. It could do by adding the class "_im_ignore_enc_rep".
==========================================================================

Ver.1.0.10 (Will be release soon.)
- Supported to authenticate with the account of the database engine.
  But it has some serious issue, the row string of the password should be stored in a cookie.
  This must be modify.
- Modified Sample schema and FileMaker DB File for "INTER-Mediator Basic" course.
- Sample Database for FileMaker 12 is added.
- [Bug on 10.0.9 or before] Radio buttons can't show and update data, fixed it.

Ver.1.0.9 (2012/3/23)
- [BUG on 1.0.7] Fixed the authorization setting was wrongly recognized.
- [BUG on 1.0.7] Fixed a cosmetic issue for the customized navigation.
- Replaced encodeURI function with encodeURIComponent function for POST method.
- WebSite Sample can edit the contents.

Ver.1.0.8 (2012/3/21)