@@ -15,7 +15,7 @@ $tableDefinitions = array(
         'paging' => true,
         'key' => 'id',
         'query' => array(
-            array('field' => 'issued', 'value' => '2012-01-01', 'operator' => '>=')
+        //    array('field' => 'issued', 'value' => '2012-01-01', 'operator' => '>=')
         ),
         'sort' => array(
             array('field' => 'id', 'direction' => 'ASC'),
@@ -33,6 +33,18 @@ $tableDefinitions = array(
         'repeat-control' => 'insert delete',
         'default-values' => array(
             array('field' => 'product_id', 'value' => 1),
+        ),
+        'validation' => array(
+            array(
+                'field' =>'qty',
+                'rule'=>'value>=0 && value<100',
+                'message'=>'Quantity should be between 1..99.'
+            ),
+            array(
+                'field' =>'unitprice',
+                'rule'=>'value>=0 && value<10000',
+                'message'=>'Unit price should be between 1.. 9999.'
+            ),
         ),
     ),
     array(
@@ -52,6 +64,6 @@ $optionDefinitions = array(
 );
 $dbDefinitions = array('db-class' => 'PDO');
 
-IM_Entry($tableDefinitions, $optionDefinitions, $dbDefinitions, false);
+IM_Entry($tableDefinitions, $optionDefinitions, $dbDefinitions, 1);
 
 ?>
